--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body{
 
 header{ 
 
-background-color: deeppink;
+background-color: rgb(248, 147, 201);
 
 height: 23vh;
 display: flex;
@@ -30,10 +30,37 @@ margin-top: 15px;
     display: flex;
     margin-top: 90px;
     margin-left: 20%;
+    border-radius: 70px;
 }
 
-login{
+.login{
     display: flex;
-    margin-top: 90px;
-    margin-left: 60%;
+    margin-top: 130px;
+    margin-left: 30%;
+    
+    gap: 25px;
 }
+
+.login a,
+.login a:visited {
+
+font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+color: rgb(240, 26, 97);
+text-decoration: none;
+font-size: 22px;
+font-weight: bold;
+ }
+
+ .pie {
+    justify-content: center;
+    gap: 25px;
+    background-color: rgb(248, 147, 201);
+    height: 5vh;
+    display: flex;
+    flex-direction: row;
+    padding: 20px;
+    border-radius: 20px;
+    width: 100%;
+    margin-top: 10px
+ }
+
