--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,8 @@ font-weight: bold;
 
  .pie {
     justify-content: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 18px;
     gap: 25px;
     background-color: rgb(248, 147, 201);
     height: 5vh;
@@ -64,3 +66,33 @@ font-weight: bold;
     margin-top: 10px
  }
 
+.menu {
+display: flex;
+list-style: none;
+padding-left: 0%; 
+margin: 0%;   
+background-color: rgb(248, 147, 201);
+flex-direction: column;
+padding: 30px;
+border-radius: 20px;
+width: 10%;
+margin-top: 15px
+}
+
+.menu li {
+  margin-bottom: 15px;        
+  padding-left: 10px;         
+  border-bottom: 2px solid #f08; 
+}
+
+
+.menu a,
+.menu a:visited {
+
+font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+color: rgb(240, 26, 97);
+text-decoration: none;
+font-size: 22px;
+font-weight: bold;
+column-gap: 10px;
+ }
