--- a/css/style.css
+++ b/css/style.css
@@ -70,17 +70,17 @@ font-weight: bold;
 display: flex;
 list-style: none;
 padding-left: 0%; 
-margin: 0%;   
+margin: 10px;   
 background-color: rgb(248, 147, 201);
 flex-direction: column;
 padding: 30px;
 border-radius: 20px;
 width: 10%;
-margin-top: 15px
+margin-top: 25px
 }
 
 .menu li {
-  margin-bottom: 15px;        
+  margin-bottom: 60px;        
   padding-left: 10px;         
   border-bottom: 2px solid #f08; 
 }
