--- a/css/style.css
+++ b/css/style.css
@@ -27,12 +27,34 @@ margin-top: 15px;
     margin-left: 20px;
 }
 
-.buscador{ 
+.buscador form{ 
     display: flex;
-    margin-top: 90px;
-    margin-left: 20%;
-    border-radius: 70px;
+    background-color: aliceblue;
+    border-radius: 25px;
+    width: 300px;
+    margin-left: 70%;
+    justify-content: center;
+    margin-top: 10%;
 }
+
+.buscador input {
+    border-bottom-left-radius: 20px;
+    border-top-left-radius: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 10px 15px;
+    font-size: 20px;
+    color: #333;
+}
+
+.buscador button {
+  background: #ff4d80;
+  color: white;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+  padding: 10px 15px;
+  font-size: 16px;
+}
+
 
 .login{
     display: flex;
@@ -153,7 +175,9 @@ column-gap: 10px;
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
-    width: 90%;
+    width: 10%;
     border-radius: 20px;
     margin: 10px;
  }
+
+ 
