--- a/css/style.css
+++ b/css/style.css
@@ -58,9 +58,8 @@ margin-top: 15px;
 
 .login{
     display: flex;
-    margin-top: 130px;
-    margin-left: 30%;
-    
+    margin-top: 100px;
+    margin-left: 40%;
     gap: 25px;
 }
 
@@ -88,24 +87,32 @@ font-weight: bold;
     width: 100%;
     margin-top: 10px
  }
+ 
+.catego{
+    display: flex;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 25px;
+    color: rgb(255, 255, 255);
+    font-weight: 700;
+}
+
 
 .menu {
 display: flex;
 list-style: none;
 padding-left: 0%; 
-margin: 10px;   
+margin: -28px;   
 background-color: rgb(248, 147, 201);
 flex-direction: column;
 padding: 30px;
 border-radius: 20px;
-width: 10%;
+width: 13%;
 margin-top: 25px
 }
 
 .menu li {
-  margin-bottom: 60px;        
-  padding-left: 10px;         
-  border-bottom: 2px solid #f08; 
+  margin-bottom: 40px;               
+  border-bottom: 3px solid rgb(233, 37, 95); 
 }
 
 
@@ -117,8 +124,12 @@ color: rgb(240, 26, 97);
 text-decoration: none;
 font-size: 22px;
 font-weight: bold;
-column-gap: 10px;
  }
+
+.listalado {
+    display: flex;
+list-style: none;
+}
  
  .fotohuevo{
     width: 500px;
