--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,11 @@ body{
     flex-direction: column;
     align-items: center;
     background-color: rgba(160, 160, 153, 0.477);
-}
+    background-image: url("../img/pgp_sweetbonanzadice.png");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-attachment: fixed;
+
 
 header{ 
 
