--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,8 @@ header{
     border-radius: 20px;
     width: 90%;
     margin-top: 15px;
+    gap: 40px;
+    
 
 }
 
@@ -68,7 +70,7 @@ header{
     display: flex;
     margin-top: 100px;
     margin-left: 40%;
-    gap: 25px;
+    gap: 30px;
 }
 
 .login a,
@@ -106,20 +108,22 @@ font-weight: bold;
 
 
 .menu {
+position: static;
 display: flex;
 list-style: none;
-padding-left: -40%; 
-margin: -265%;   
+margin: 10px;   
 background-color: rgb(248, 147, 201);
 flex-direction: column;
-padding: 10%;
+padding: 20px;
 border-radius: 20px;
-width: 75%;
-margin-top: 25px
+width: 200px;
+align-items: flex-start;
+margin-left: -700px;
+align-self: start;
 }
 
 .menu li {
-  margin-bottom: 40%;               
+  margin-bottom: 30%;               
   border-bottom: 3px solid rgb(233, 37, 95); 
 }
 
@@ -189,7 +193,7 @@ list-style: none;
     margin: 10px;
  }
  .huevo5{
-    background-color:rgb(0, 128, 0);
+    background-color:rgb(65, 168, 65);
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
