--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ list-style: none;
  }
 
  .huevo1{
-    background-color:  rgb(233, 37, 95);
+    background-color:  rgb(248, 147, 201, 0.9);
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -166,7 +166,7 @@ list-style: none;
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
-    width: 90%;
+    width: 30%;
     border-radius: 20px;
     margin: 10px;
  }
@@ -177,7 +177,7 @@ list-style: none;
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
-    width: 90%;
+    width: 10%;
     border-radius: 10px;
     margin: 10px;
  }
@@ -188,7 +188,7 @@ list-style: none;
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
-    width: 99%;
+    width: 50%;
     border-radius: 20px;
     margin: 10px;
  }
@@ -205,4 +205,24 @@ list-style: none;
 
  img{
     width: 220px
+ }
+ .huevo6{
+    background-color: rgb(0, 255, 255, 0.5);
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 80%;
+    border-radius: 20px;
+    margin: 10px;
+ }
+ .productotop{
+    background-color:  rgb(248, 147, 201, 0.9);
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 90%;
+    border-radius: 20px;
+    margin: 10px;
  }
