--- a/css/style.css
+++ b/css/style.css
@@ -216,13 +216,60 @@ list-style: none;
     border-radius: 20px;
     margin: 10px;
  }
- .productotop{
+ section.productostop{
+    display: flex;
+ }
+ .productostop1{
     background-color:  rgb(248, 147, 201, 0.9);
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
-    width: 90%;
+    width: 100%;
     border-radius: 20px;
     margin: 10px;
  }
+
+ .productostop2{
+  background-color: rgb(248, 147, 201, 0.9);
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  width: 100%;
+  border-radius: 20px;
+  margin: 10px;
+ }
+
+.productostop3{
+  background-color: rgb(248, 147, 201, 0.9);
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  width: 100%;
+  border-radius: 20px;
+  margin: 10px;
+}
+
+.productostop3{
+    background-color: rgb(248, 147, 201, 0.9);
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  width: 100%;
+  border-radius: 20px;
+  margin: 10px;
+}
+
+.productostop4{
+    background-color: rgb(248, 147, 201, 0.9);
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  width: 100%;
+  border-radius: 20px;
+  margin: 10px;
+}
