--- a/css/style.css
+++ b/css/style.css
@@ -231,6 +231,16 @@ img {
     max-width: 70%;
 }
 
+.productostop a,
+.productostop a:visited {
+
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: rgb(240, 26, 97);
+    text-decoration: none;
+    font-size: 22px;
+    font-weight: bold;
+}
+
 .fotoP{
     width: 200px;
     height: 200px;
@@ -252,6 +262,7 @@ img {
     width: 100%;
     border-radius: 20px;
     margin: 10px;
+
 }
 
 .mainProduct{
