--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@ body {
     width: 100vw;
     justify-content: center;
     flex-direction: column;
-    align-items: center;
     background-color: rgba(160, 160, 153, 0.477);
     background-image: url("../img/pgp_sweetbonanzadice.png");
     background-repeat: no-repeat;
@@ -91,6 +90,7 @@ header {
 
 .pie {
     justify-content: center;
+    align-items: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 18px;
     gap: 25px;
@@ -228,6 +228,7 @@ img {
 .productostop {
     display: flex;
     flex-direction: row;
+    -ms-grid-row-span: inherit;
     max-width: 70%;
 }
 
@@ -278,4 +279,9 @@ img {
 
 .resultados{
     display: none;
+}
+.chocolates2{
+    width: 100%;
+    display: block;
+    margin-left: 500px;
 }
