--- a/css/style.css
+++ b/css/style.css
@@ -226,9 +226,11 @@ img {
 }
 
 .productostop {
-    display: flex;
-    flex-direction: row;
-    max-width: 70%;
+    display: grid;
+    gap: 16px;
+    align-items: start;
+    width: 100%;
+    grid-template-columns: repeat(5, minmax(0, 1fr));
 }
 
 .productostop a,
