--- a/css/style.css
+++ b/css/style.css
@@ -265,6 +265,21 @@ img {
     border-radius: 20px;
     margin: 10px;
 
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: rgb(240, 26, 97);
+    text-decoration: none;
+    font-size: 22px;
+    font-weight: bold;
+}
+
+.productostop1 a,
+.productostop1 a:visited {
+
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: rgb(240, 26, 97);
+    text-decoration: none;
+    font-size: 22px;
+    font-weight: bold;
 }
 
 .mainProduct{
@@ -278,6 +293,18 @@ img {
     text-align: center;
 }
 
+.productosSearch a,
+.productosSearch a:visited {
+
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: rgb(240, 26, 97);
+    text-decoration: none;
+    font-size: 22px;
+    font-weight: bold;
+}
+
 .resultados{
     display: none;
 }
+
+
