--- a/css/style.css
+++ b/css/style.css
@@ -226,9 +226,10 @@ img {
 }
 
 .productostop {
-    display: grid;
+    display: flex;
+    flex-wrap: wrap;
     gap: 16px;
-    align-items: start;
+    flex-direction: row;
     width: 100%;
     grid-template-columns: repeat(5, minmax(0, 1fr));
 }
@@ -250,7 +251,6 @@ img {
 }
 
 .pAleatorios{
-    width: 100%;
     display: block;
     margin-left: 50px;
 }
@@ -261,7 +261,7 @@ img {
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
-    width: 100%;
+    width: 200px;
     border-radius: 20px;
     margin: 10px;
 
@@ -305,14 +305,4 @@ img {
 
 .resultados{
     display: none;
-}
-<<<<<<< HEAD
-
-
-=======
-.chocolates2{
-    width: 100%;
-    display: block;
-    margin-left: 500px;
-}
->>>>>>> 1bdea12627ce1297a7c4b3f06a9d4a1a9358d47c
+}       
