--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
     width: 100vw;
     justify-content: center;
     flex-direction: column;
+    align-items: center;
     background-color: rgba(160, 160, 153, 0.477);
     background-image: url("../img/pgp_sweetbonanzadice.png");
     background-repeat: no-repeat;
