--- a/css/style.css
+++ b/css/style.css
@@ -233,6 +233,7 @@ img {
     flex-direction: row;
     width: 100%;
     grid-template-columns: repeat(5, minmax(0, 1fr));
+    text-align: center;
 }
 
 .productostop a,
