--- a/css/style.css
+++ b/css/style.css
@@ -253,8 +253,16 @@ img {
 }
 
 .pAleatorios{
-    display: block;
     margin-left: 50px;
+    background-color: rgb(248, 147, 201);
+    display: flex;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 15px;
+    color: rgb(255, 255, 255);
+    width: 40%;
+    border-radius: 20px;
+    margin: 10px;
+    justify-content: center;
 }
 
 .productostop1 {
