--- a/css/style.css
+++ b/css/style.css
@@ -275,7 +275,7 @@ img {
     border-radius: 20px;
     margin: 10px;
 
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: rgb(240, 26, 97);
     text-decoration: none;
     font-size: 22px;
@@ -337,6 +337,25 @@ img {
     font-size: large;
 }
 
+.register2{
+    background-color: rgb(248, 147, 201);
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 100%;
+    border-radius: 10px;
+    margin: 25px;
+}
+.register3{
+   padding: 10px;
+}
 
-
+.register4{
+    margin-top: 10px;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 2px solid black;
+    width: 100%;
+}
 
