--- a/css/style.css
+++ b/css/style.css
@@ -359,3 +359,25 @@ img {
     width: 100%;
 }
 
+.login2{
+    background-color: rgb(248, 147, 201);
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 100%;
+    border-radius: 10px;
+    margin: 25px;
+}
+.login3{
+   padding: 10px;
+}
+
+.login4{
+    margin-top: 10px;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 2px solid black;
+    width: 100%;
+}
+
