--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ header {
     border-bottom-left-radius: 20px;
     border-top-left-radius: 20px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding: 10px 15px;
+    padding: 15px;
     font-size: 20px;
     color: #333;
 }
@@ -64,7 +64,7 @@ header {
     color: white;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
-    padding: 10px 15px;
+    padding: 15px;
     font-size: 16px;
 }
 
@@ -432,7 +432,7 @@ img {
         margin: 10px;
         border-bottom: none;
     }
-    
+
     .fotohuevo {
         width: 100%;
         height: auto;
