--- a/css/style.css
+++ b/css/style.css
@@ -162,40 +162,44 @@ header {
 }
 
 .huevo2 {
-    background-color: rgb(194, 194, 176);
+    background-color: rgb(240, 26, 97);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
-    width: 30%;
+    width: 40%;
     border-radius: 20px;
     margin: 10px;
 }
 
 .huevo3 {
-    background-color: rgb(194, 194, 176);
+    background-color: rgb(240, 26, 97);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
-    width: 10%;
-    border-radius: 10px;
+    width: 20%;
+    border-radius: 20px;
     margin: 10px;
 }
 
 .huevo4 {
-    background-color: rgb(194, 194, 176);
+    background-color: rgb(240, 26, 97);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
-    width: 50%;
-    border-radius: 20px;
+    width: 75%;
+    border-radius: 10px;
     margin: 10px;
 }
 
 .huevo5 {
     background-color: rgb(65, 168, 65);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -210,7 +214,7 @@ img {
 }
 
 .huevo6 {
-    background-color: rgb(0, 255, 255, 0.5);
+    background-color: rgb(0, 255, 255);
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -218,6 +222,22 @@ img {
     width: 80%;
     border-radius: 20px;
     margin: 10px;
+}
+
+.huevo7{
+    background-color: rgb(240, 26, 97);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 50%;
+    border-radius: 20px;
+    margin: 5px;
+    margin-bottom: 15px;
+}
+
+.huevo8{
+    margin: 30px;
 }
 
 .productostop {
