--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ header {
     color: white;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
-    padding: 15px;
+    ing: 15px;
     font-size: 16px;
 }
 
