--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ header {
     color: white;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
-    ing: 15px;
+    padding: 15px;
     font-size: 16px;
 }
 
@@ -90,7 +90,7 @@ header {
     font-size: 18px;
     gap: 25px;
     background-color: rgb(248, 147, 201);
-    height: 5px;
+    height: 5vh;
     display: flex;
     flex-direction: row;
     padding: 20px;
@@ -337,7 +337,7 @@ img {
     align-items: center;
     width: 100%;
     border-radius: 10px;
-    margin: 15px;
+    margin: 25px;
 }
 
 .register3{
