--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,9 @@ body {
 
 main {
     display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    width: 100%;
 }
 
 header {
@@ -119,13 +122,11 @@ header {
 }
 
 .menu li {
-    margin-bottom: 30%;
+    margin-bottom: 20%;
     border-bottom: 3px solid rgb(233, 37, 95);
 }
 
-.menu a,
-.menu a:visited {
-
+.menu a{
     color: rgb(240, 26, 97);
     text-decoration: none;
     font-size: 22px;
@@ -134,7 +135,9 @@ header {
 
 .listalado {
     display: flex;
+    flex-direction: column;
     list-style: none;
+    padding: 0;
 }
 
 .fotohuevo {
