--- a/css/style.css
+++ b/css/style.css
@@ -338,9 +338,10 @@ img {
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
-    width: 100%;
+    width: 20%;
     border-radius: 10px;
     margin: 25px;
+    margin-left: 600px;
 }
 
 .register3{
@@ -361,9 +362,10 @@ img {
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
-    width: 100%;
+    width: 20%;
     border-radius: 10px;
     margin: 75px;
+    margin-left: 600px;
 }
 
 .login3{
