--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ header {
     font-size: 16px;
 }
 
-.login {
+.login, .saludo {
     display: flex;
     margin-top: 100px;
     margin-left: 40%;
